feat: simplicy stream api
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>